--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <div class="row">
             <div class="col-lg-12 text-center">
                 <h2 class="section-heading">Video</h2>
-                <hr class="primary">
+<!--                 <hr class="primary"> -->
                 <div style="width:800px;padding:0;margin:auto; display:flex;justify-content:center;">
                 <iframe width="800"
                 height="450"
@@ -122,7 +122,7 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 text-center">
                 <h2 class="section-heading">Contact</h2>
-                <hr class="primary">
+<!--                 <hr class="primary"> -->
             </div>
         <div class="col-lg-3 col-lg-offset-3 text-center">
             <a href="mailto:lihuan.cs@zju.edu.cn">
@@ -142,8 +142,8 @@
         </div>
 
         <div class="col-lg-10 col-lg-offset-1 text-center">
-            <br />
-            Zhejiang University - SUSTech - Roskilde University<br/>
+<!--             <br /> -->
+<!--             Zhejiang University - SUSTech - Roskilde University<br/> -->
             <p>This website is powered by Jekyll with theme <a href="https://github.com/volny/creative-theme-jekyll" target="_blank">creative</a>; last updated in March 2023.</p>
         </div>
 
