--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@
         <div class="row">
             <div class="col-lg-12 text-center">
                 <h2 class="section-heading">Video</h2>
-<!--                 <hr class="primary"> -->
+                &#8595; is a placeholder
+                <hr class="primary">
                 <div style="width:800px;padding:0;margin:auto; display:flex;justify-content:center;">
                 <iframe width="800"
                 height="450"
@@ -104,7 +105,7 @@
         </div>
     </div>
     <div class="container">
-        
+
     </div>
 </section>
 
@@ -112,7 +113,9 @@
       <div class="container text-center">
           <div class="call-to-action">
               <h2>Resources</h2>
-              <a href="#" target="_blank" class="btn btn-default btn-xl wow bounceIn">Code [to be released]</a>
+              <hr class="primary">
+              <a href="#" target="_blank" class="btn btn-default btn-xl wow bounceIn" style="padding-left:60px;padding-right:60px;">REPORT</a>
+              <a href="#" target="_blank" class="btn btn-default btn-xl wow bounceIn" style="padding-left:60px;padding-right:60px;">CODEBASE</a>
           </div>
       </div>
 </section>
@@ -122,7 +125,7 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 text-center">
                 <h2 class="section-heading">Contact</h2>
-<!--                 <hr class="primary"> -->
+                <hr class="primary">
             </div>
         <div class="col-lg-3 col-lg-offset-3 text-center">
             <a href="mailto:lihuan.cs@zju.edu.cn">
