--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <div class="row">
             <div class="col-lg-12 text-center">
                 <h2 class="section-heading">Video</h2>
-                &#8595; is a placeholder
+<!--                 &#8595; is a placeholder -->
                 <hr class="primary">
                 <div style="width:800px;padding:0;margin:auto; display:flex;justify-content:center;">
                 <iframe width="800"
