update video link

--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
             <h1>T. E. Q. </h1>
             <h2>An Open and User-friendly Testbed for Edge Computing based Query Processing Algorithms</h1>
             <hr>
-            <p>The use of edge computing as a means of querying dense and rapid data streams has shown great promise, but developing and assessing algorithms for this paradigm are still laborious for researchers. Current simulators are unable to execute real computations and the decentralized nature of edge computing algorithms makes them hard to implement and test. To address these issues, we propose TEQ (Testbed for Edge computing based Query processing algorithms), which is designed to be (1) open, enabling extensible simulation and new algorithm deployment; (2) user-friendly, simplifying currently heavy simulation, complex algorithm module management, and repetitive evaluation. TEQ covers various techniques to achieve the design goals, such as a method to streamline decentralized algorithm modules as one executable Flink script, the data/query playback control to ensure reproducible streams during evaluations, and a means to transform Flink evaluation metrics into desired metrics associated with user-customized edge computing runtimes. TEQ is in the open source process to extract external contributions and advance edge computing based querying techniques.
+            <p>
+            Edge computing is ideally suited for querying populations of rapid data streams. Yet, while edge computing algorithms are challenging to develop and assess due to their decentralized nature, there is a lack of supporting tools. For example, current simulators fail to execute real queries. To rectify these shortcomings, we propose TEQ, a testbed for edge computing-based query processing algorithms, that is designed expressly to be open, enabling extensible simulation and algorithm deployment, and to be user-friendly, simplifying otherwise extensive simulation, complex algorithm management, and tedious evaluation. TEQ encompasses novel techniques to achieve these capabilities, including a method to streamline decentralized algorithm modules as executable Flink scripts, data and query playback controls to ensure reproducible streams during evaluations, and means of transforming Flink metrics into desired metrics associated with user-customized edge computing runtimes. TEQ is in the open source process, the goals being to attract external contributions and to advance edge computing based querying techniques.
             </p>
             <a href="#video" class="btn btn-primary btn-xl page-scroll">See the video</a>
         </div>
@@ -97,7 +98,7 @@
                 <div style="width:800px;padding:0;margin:auto; display:flex;justify-content:center;">
                 <iframe width="800"
                 height="450"
-                src="https://www.youtube.com/embed/jLmjw78A5GI"
+                src="https://www.youtube.com/embed/kRt8mirqtAQ"
                 frameborder="0"
                 allowfullscreen></iframe>
                 </div>
