--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="huan li">
 
-    <title>TEQ: An Open and User-friendly Testbed for Edge Computing based Query Processing Algorithms</title>
+    <title>TEQ: An Open and Developer-friendly Testbed for Edge Computing based Query Processing Algorithms</title>
 
     <!-- Bootstrap Core CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
@@ -77,11 +77,11 @@
   <header>
     <div class="header-content">
         <div class="header-content-inner">
-            <h1>T. E. Q. </h1>
-            <h2>An Open and User-friendly Testbed for Edge Computing based Query Processing Algorithms</h1>
+            <h1>T. E. Q. --- to ease query-algorithm-developers</h1>
+            <h2>An Open and Developer-friendly Testbed for Edge Computing based Query Processing Algorithms</h1>
             <hr>
             <p>
-            Edge computing is ideally suited for querying populations of rapid data streams. Yet, while edge computing algorithms are challenging to develop and assess due to their decentralized nature, there is a lack of supporting tools. For example, current simulators fail to execute real queries. To rectify these shortcomings, we propose TEQ, a testbed for edge computing-based query processing algorithms, that is designed expressly to be open, enabling extensible simulation and algorithm deployment, and to be user-friendly, simplifying otherwise extensive simulation, complex algorithm management, and tedious evaluation. TEQ encompasses novel techniques to achieve these capabilities, including a method to streamline decentralized algorithm modules as executable Flink scripts, data and query playback controls to ensure reproducible streams during evaluations, and means of transforming Flink metrics into desired metrics associated with user-customized edge computing runtimes. TEQ is in the open source process, the goals being to attract external contributions and to advance edge computing based querying techniques.
+            Edge computing is ideally suited for querying populations of rapid data streams. Yet, while edge computing algorithms are challenging to develop and assess due to their decentralized nature, there is a lack of supporting tools. For example, current simulators fail to execute real queries. To rectify these shortcomings, we propose TEQ, a testbed for edge computing-based query processing algorithms, that is designed expressly to be open, enabling extensible simulation and algorithm deployment, and to be developer-friendly, simplifying otherwise extensive simulation, complex algorithm management, and tedious evaluation. TEQ encompasses novel techniques to achieve these capabilities, including a method to streamline decentralized algorithm modules as executable Flink scripts, data and query playback controls to ensure reproducible streams during evaluations, and means of transforming Flink metrics into desired metrics associated with user-customized edge computing runtimes. TEQ is in the open source process, the goals being to attract external contributions and to advance edge computing based querying techniques.
             </p>
             <a href="#video" class="btn btn-primary btn-xl page-scroll">See the video</a>
         </div>
@@ -98,7 +98,7 @@
                 <div style="width:800px;padding:0;margin:auto; display:flex;justify-content:center;">
                 <iframe width="800"
                 height="450"
-                src="https://www.youtube.com/embed/kRt8mirqtAQ"
+                src="https://www.youtube.com/embed/W3cpf91RQ9A"
                 frameborder="0"
                 allowfullscreen></iframe>
                 </div>
