--- a/index.html
+++ b/index.html
@@ -78,11 +78,10 @@
     <div class="header-content">
         <div class="header-content-inner">
             <h1>T. E. Q. --- to ease query-algorithm-developers</h1>
-            <h2>An Open and Developer-friendly Testbed for Edge Computing based Query Processing Algorithms</h1>
+            <h2>An Open and Developer-friendly Testbed for Edge-based Query Processing Algorithms</h1>
             <hr>
             <p>
-            Edge computing is ideally suited for querying populations of rapid data streams. Yet, while edge computing algorithms are challenging to develop and assess due to their decentralized nature, there is a lack of supporting tools. For example, current simulators fail to execute real queries. To rectify these shortcomings, we propose TEQ, a testbed for edge computing-based query processing algorithms, that is designed expressly to be open, enabling extensible simulation and algorithm deployment, and to be developer-friendly, simplifying otherwise extensive simulation, complex algorithm management, and tedious evaluation. TEQ encompasses novel techniques to achieve these capabilities, including a method to streamline decentralized algorithm modules as executable Flink scripts, data and query playback controls to ensure reproducible streams during evaluations, and means of transforming Flink metrics into desired metrics associated with user-customized edge computing runtimes. TEQ is in the open source process, the goals being to attract external contributions and to advance edge computing based querying techniques.
-            </p>
+                Edge computing is ideally suited for querying populations of fast data streams. However, developing and evaluating edge-based query processing algorithms is challenging due to the decentralized setting and the lack of effective tools. For example, current simulators fail to execute real queries. To rectify these shortcomings, we propose TEQ, a testbed for edge-based query processing algorithms, designed expressly to be open, enabling extensible simulation and algorithm deployment, and to be developer-friendly, simplifying otherwise cumbersome simulation, complex algorithm management, and tedious evaluation. TEQ encompasses novel techniques to achieve these capabilities, including (1) a streamlined framework for implementing decentralized algorithms as modular, Docker-based executables; (2) data and query playback controls to enable reproducible and consistent evaluations; and (3) mechanisms for transforming runtime metrics into system-wide metrics desired by algorithm developers.Currently in the open-source process, TEQ aims to foster community contributions and drive innovation in edge-based query processing.            </p>
             <a href="#video" class="btn btn-primary btn-xl page-scroll">See the video</a>
         </div>
     </div>
@@ -135,9 +134,9 @@
             </a>
         </div>
         <div class="col-lg-3 col-lg-offset-0 text-center">
-            <a href="https://github.com/msca-malot">
+            <a href="https://github.com/SuDIS-ZJU">
             <i class="fa fa-github fa-3x wow bounceIn" data-wow-delay=".1s"></i>
-                <p>msca-malot</p>
+                <p>sudis-zju</p>
             </a>
         </div>
 
