--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   Introduction Video
 </div>
 <div style="text-align: center; font-size: 1.2rem;">
-  <a href="https://www.youtube.com/watch?v=JLX8J9vz2gU" target="_blank" style="text-decoration:underline">Watch on YouTube</a>
+  <a href="https://www.youtube.com/watch?v=89XmYtMWHZY" target="_blank" style="text-decoration:underline">Watch on YouTube</a>
 </div>
 <div style="text-align: center; width=640px height=450px">
   <video controls>
